[package]
authors = ["Ronnie Chowdhury"]
description = "An interface to the Excelv12 api to help write UDF."
edition = "2021"
keywords = ["excel", "userdefined", "udf"]
license = "MIT"
name = "xladd"
readme = "Readme.MD"
repository = "https://github.com/ronniec95/xladd"
version = "0.4.2"

[features]
default = []
use_ndarray = ["ndarray"]

[dependencies]
bincode = "^1"
lazy_static = "1.4.0"
log = "0.4.8"
ndarray = { version = "^0.16.1", optional = true }
thiserror = "1.0"
serde = "^1"
serde_derive = "^1"
widestring = "*"
winapi = { version = "*", features = ["winuser", "libloaderapi", "debugapi"] }
